# structured-estimator

./: Cargo.toml  LICENSE  README.md
benches/: ekf_overhead.rs
docs/: cargo-expand-guide.md  codegen-design.md  ekf-design.md  proc-macro-ide-support.md  sunpou-manifold-types.md  typed-covariance-design.md
examples/: attitude_estimation.rs  direction_estimation.rs  direction_estimation_comparison.rs  orbit_estimation.rs
src/: autodiff.rs  components.rs  ekf.rs  ekf_model.rs  lib.rs  manifold_jacobian.rs  sunpou_integration.rs  ukf.rs  value_structs.rs
structured-estimator-codegen/: Cargo.toml
structured-estimator-codegen/src/: expr.rs  lib.rs  model.rs  model_v2.rs
structured-estimator-codegen/tests/: build_rs_example.rs  compile_generated.rs  generate_and_verify.rs
structured-estimator-macro/: Cargo.toml
structured-estimator-macro/src/: lib.rs
tests/: attitude_determination.rs  autodiff_tests.rs  direction_estimation.rs  ekf_model_tests.rs  ekf_tests.rs  orbit_determination.rs  sunpou_integration.rs  sunpou_manifold.rs  three_tier_test.rs
